<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DBFFC1"
        tools:context=".fragments.DetailsFragment">

        <EditText
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:enabled="false"
            android:gravity="start|top"
            android:hint="@string/task_description"
            android:inputType="textMultiLine|textPersonName"
            android:lines="8"
            app:layout_constraintEnd_toEndOf="@+id/taskName"
            app:layout_constraintStart_toStartOf="@+id/taskName"
            app:layout_constraintTop_toBottomOf="@+id/taskName" />

        <EditText
            android:id="@+id/taskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/task_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/taskNameLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/taskNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/name"
            app:layout_constraintBaseline_toBaselineOf="@+id/taskName"
            app:layout_constraintEnd_toStartOf="@+id/taskName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintBaseline_toBaselineOf="@+id/description"
            app:layout_constraintStart_toStartOf="@+id/taskNameLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/images"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="-35dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="55dp"
            android:rotationY="-15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:listitem="@layout/task_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/save_button"
        android:src="@drawable/edit_button" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
